Fix minor bug on mobile, hopefully.

--- a/less/styles.less
+++ b/less/styles.less
@@ -552,8 +552,7 @@ main {
         
         .image_slider {
             a {
-                height: 20.2vh;
-                margin-top: -0.1vh;
+                height: 20.1vh;
             }
             img {
                 width:100%;
